compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/expressionBodyEmptyParens.kt
// FIR_IDENTICAL
// RUN_PIPELINE_TILL: FRONTEND
fun foo() = (<!SYNTAX!><!>)

/* GENERATED_FIR_TAGS: functionDeclaration */
